<resources>
    <string name="app_name">Spendings Tracker</string>
    <string name="item_name"> Name </string>
    <string name="item_desc"> Description </string>
    <string name="item_date"> Date </string>
    <string name="item_price"> Price </string>
    <string name="item_category"> Category </string>
    <string name="category_new"> New Category </string>
    <string name="category_default"> Choose a Category </string>
    <string name="date_default"> Choose a Date </string>
    <string name="dialog_new_category"> Category Name </string>
    <string name="item_name_hint"> Breakfast stuff .. </string>
    <string name="item_desc_hint"> Enter some description.. </string>
    <string name="item_price_hint"> 12.40 .. </string>
    <string name="add_spendings"> Add </string>
    <string name="change_month_label"> Change Month </string>
    <string name="title_activity_main">ActivityMain</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="add_spendings_label"> New Spending </string>
    <string name="title_activity_settings">Settings</string>
    <string name="change_month"> Change Month </string>
    <string name="add_money"> Add Money </string>
    <string name="remove_money"> Remove Money </string>
    <string name="money_dialog_add"> Add Money </string>
    <string name="money_dialog_remove"> Remove Money </string>
    <string name="pref_money"> money_amount_key </string>


    <!-- Strings related to overview -->
    <string name="overview_title"> Overview for: %1s </string>
    <string name="month_total"> Spendings this month: %1s KM </string>
    <string name="current_month_goal" formatted="false"> Spending Goal for %1s: %2s KM </string>
    <string name="left_to_spend_month"> Left to spend this month: %1s </string>
    <string name="today_total"> Spendings today: %1s KM </string>
    <string name="left_to_spend_today"> Left to spend today: %1s </string>
    <string name="goal_not_set_general"> Goal not set for %1s </string>
    <string name="set_goal_warning"> To see this info, set goal first. </string>
    <string name="total_money"> You currently have: %1s KM </string>
    <string name="overview_general_heading"> General Overview </string>
    <string name="overview_today_heading"> Overview for today </string>
    <string name="days_left"> Days left: %1s </string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
