<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/item_name"/>

    <EditText
        android:id="@+id/item_name_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name_hint"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/item_desc"/>

    <EditText
        android:id="@+id/item_desc_id"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/item_desc_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/item_date"/>

    <Button
        android:id="@+id/item_date_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_default"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/item_price"/>

    <EditText
        android:id="@+id/item_price_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/item_category"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/item_category_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="11dp"
            android:text="@string/category_default"/>

        <Button
            android:id="@+id/item_category_new_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_new"
            android:elevation="9dp" />


    </LinearLayout>

    <Button
        android:id="@+id/add_spendings_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_spendings"/>

</LinearLayout>







